# plan-todos

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json  vitest.config.ts
.github/workflows/: release.yml
docs/plans/: 2026-02-13-todo-plan-design.md  2026-02-14-database-indexes.md  2026-02-14-statistics-api.md  2026-02-15-circulation-design.md  2026-02-15-import-export-design.md  2026-02-15-import-export-plan.md  2026-02-19-circulation-ui-design.md  2026-02-19-v0.4.x-iteration-design.md  api-design.md  component-design.md  core-concepts.md  database-schema.md  iteration-plan.md  navigation-ui-design.md
docs/plans/archived/: 2026-02-14-search-calendar-tests.md  2026-02-15-circulation-design.md  2026-02-15-circulation-implementation-plan.md  2026-02-19-circulation-implementation-plan.md  2026-02-19-circulation-ui-design.md
scripts/: generate-icons.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: batch.rs  dashboard.rs  db.rs  export.rs  import.rs  lib.rs  main.rs  milestones.rs  models.rs  notification_plugins.rs  notifications.rs  plans.rs  statistics.rs  steps.rs  tags.rs  targets.rs  tasks.rs  tests.rs  todos.rs
src-tauri/src/commands/: circulations.rs  command_log.rs  dashboard.rs  export.rs  import.rs  milestones.rs  mod.rs  search.rs  steps.rs  todos.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/views/: CirculationDetailView.tsx  CirculationsView.tsx  Dashboard.tsx  ImportExportView.tsx  MilestonesView.tsx  (+12 more)
src/hooks/: useGlassSettings.ts  useTheme.ts
src/lib/: api.test.ts  api.ts  basic.test.ts
(+26 files in other folders)
